--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -29,6 +29,7 @@
 .icon-menu_icon01:before { content: "\e904"; }
 .icon-menu_icon02svg:before { content: "\e905"; }
 .icon-search:before { content: "\e906"; }
+.icon-comments:before { content: "\e920"; }
 .icon-home:before { content: "\e907"; }
 .icon-lock-closed:before { content: "\e908"; }
 .icon-eye:before { content: "\e909"; }
@@ -50,7 +51,10 @@
 .icon-check_circle:before { content: "\e919"; }
 .icon-exit_to_app:before { content: "\e91a"; }
 .icon-info:before { content: "\e91b"; }
+.icon-camera:before { content: "\e923"; }
 .icon-chevron-down:before { content: "\e91c"; }
 .icon-chevron-up:before { content: "\e91d"; }
+.icon-eye1:before { content: "\e921"; }
 .icon-send:before { content: "\e91e"; }
+.icon-trash-2:before { content: "\e922"; }
 .icon-lock:before { content: "\e91f"; }
