--- a/scss/public.scss
+++ b/scss/public.scss
@@ -441,7 +441,12 @@ header {
   padding: 15px;
 }
 
-
+.chooseBox {
+  display: inline-block;
+  width: 100%;
+  max-height: 500px;
+  overflow-y: scroll;
+}
   
 
 
