--- a/css/input.css
+++ b/css/input.css
@@ -16,10 +16,13 @@ label { padding: 0; margin-right: 12px; cursor: pointer; }
 .rememberCheck:checked + span { background: url(../img/cbx-on.svg) no-repeat; }
 
 .search-container { float: left; margin-top: 20px; border: 1px solid #dcdbdc; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+.search-container.searchNotMT { margin-top: 0; }
 .search-container input[type=text] { padding: 6px; margin-top: 2px; font-size: 1rem; border: none; }
 .search-container input[type=text]::placeholder { color: #dcdbdc; }
+.search-container input[type=text].price_search { width: 80%; padding: 10px 6px; }
 .search-container .searchBtn { float: left; padding: 7px 10px 5px 8px; font-size: 1.2rem; border: none; cursor: pointer; color: #dcdbdc; background-color: rgba(67, 151, 255, 0); -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .search-container .searchBtn:hover, .search-container .searchBtn:active { background-color: #4397ff; color: white; }
+.search-container .searchBtn.price_icon { background-color: rgba(67, 151, 255, 0.3); color: white; float: right; margin: 3px 3px 0 0; }
 
 .select-style { padding: 0; margin: 0; border: 1px solid #dcdbdc; width: 100%; border-radius: 3px; overflow: hidden; background-color: #fff; background: #fff url(../img/se_icon.svg) no-repeat 100% 50%; }
 .select-style select { font-size: 1.1rem; padding: 10px 15px; width: 100%; border: none; box-shadow: none; background-color: transparent; background-image: none; -webkit-appearance: none; -moz-appearance: none; appearance: none; color: #8c9198; }
@@ -28,3 +31,12 @@ label { padding: 0; margin-right: 12px; cursor: pointer; }
 .statusCheck { display: inline-block; height: 18px; appearance: button; -moz-appearance: button; /* Firefox */ -webkit-appearance: button; }
 
 .statusCheck2 { display: inline-block; margin-left: 0; font-size: 1rem; color: #202e32; }
+
+.chooseCheck { display: inline-block; height: 18px; appearance: button; -moz-appearance: button; /* Firefox */ -webkit-appearance: button; }
+
+.btn-box { display: inline-block; vertical-align: middle; width: 40px; height: 20px; border-radius: 100px; background-color: #ccc; box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.13) inset; }
+.btn-box .btn { display: inline-block; width: 20px; height: 20px; border-radius: 50%; background-color: #fff; margin-left: 0; /*動畫從ml為0開始*/ transition: .5s; box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3); }
+
+.checkbox { position: absolute; opacity: 0; }
+.checkbox:checked + .btn-box { background-color: #8f8; }
+.checkbox:checked + .btn-box .btn { margin-left: 20px; }
