--- a/css/other.css
+++ b/css/other.css
@@ -59,6 +59,8 @@
 
 .proListImg { display: inline-block; width: 100%; max-width: 80px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; border: 1px solid #dcdbdc; overflow: hidden; }
 
+.proFinalImg { display: inline-block; width: 100%; max-width: 247px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; border: 1px solid #dcdbdc; overflow: hidden; }
+
 .order_info { display: inline-block; width: 100%; display: none; }
 .order_info.order_info_show { display: inline-block; }
 
@@ -71,3 +73,15 @@
 .price_boxsC.price_boxsC_show { display: inline-block; width: 100%; background-color: white; padding: 15px 20px; }
 
 .price_boxsB { display: inline-block; width: 100%; height: 8px; width: 100%; background-color: white; -webkit-border-bottom-right-radius: 3px; -webkit-border-bottom-left-radius: 3px; -moz-border-radius-bottomright: 3px; -moz-border-radius-bottomleft: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; }
+
+.chooseBoxs { display: inline-block; width: 100%; padding: 10px 20px; color: white; text-align: left; font-size: 1.15rem; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+.chooseBoxs.cB_blue { background-color: #4397ff; }
+.chooseBoxs.cB_green { background-color: #30ba80; }
+.chooseBoxs.cB_GY { background-color: #cba624; }
+.chooseBoxs.cB_pr { background-color: #7044bc; }
+.chooseBoxs:after { display: inline-block; content: '\e91c'; float: right; font-family: icon; line-height: 26px; }
+
+.chooseBoxsC { display: none; }
+.chooseBoxsC.chooseBoxsC_show { display: inline-block; width: 100%; background-color: white; padding: 15px 0; }
+
+.t-info { display: inline-block; font-size: 1.38rem; color: #fbdf93; }
