--- a/scss/space.scss
+++ b/scss/space.scss
@@ -62,6 +62,10 @@
   margin-bottom: 20px;
 }
 
+.m-d-15 {
+  margin-bottom: 15px;
+}
+
 .m-d-10 {
   margin-bottom: 10px;
 }
@@ -76,6 +80,10 @@
 
 .m-l-10 {
   margin-left: 10px;
+}
+
+.m-r-10 {
+  margin-right: 10px;
 }
 
 .m-lr-10 {
