--- a/scss/link.scss
+++ b/scss/link.scss
@@ -189,6 +189,10 @@ button {
       line-height: 29px;
       font-size: 1rem;
     }
+
+    &.icon-trash-2 {
+      line-height: 29px;
+    }
   }
 }
 
