--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -58,7 +58,7 @@
 .icon-eye:before {
   content: "\e909";
 }
-.icon-trash:before {
+.icon-trash-2:before {
   content: "\e90a";
 }
 .icon-add:before {
@@ -127,7 +127,7 @@
 .icon-send:before {
   content: "\e91e";
 }
-.icon-trash-2:before {
+.icon-trash-2-2:before {
   content: "\e922";
 }
 .icon-lock:before {
