--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -33,7 +33,7 @@
 .icon-home:before { content: "\e907"; }
 .icon-lock-closed:before { content: "\e908"; }
 .icon-eye:before { content: "\e909"; }
-.icon-trash:before { content: "\e90a"; }
+.icon-trash-2:before { content: "\e90a"; }
 .icon-add:before { content: "\e90b"; }
 .icon-add_circle:before { content: "\e90c"; }
 .icon-clear:before { content: "\e90d"; }
@@ -56,5 +56,5 @@
 .icon-chevron-up:before { content: "\e91d"; }
 .icon-eye1:before { content: "\e921"; }
 .icon-send:before { content: "\e91e"; }
-.icon-trash-2:before { content: "\e922"; }
+.icon-trash-2-2:before { content: "\e922"; }
 .icon-lock:before { content: "\e91f"; }
