--- a/scss/link.scss
+++ b/scss/link.scss
@@ -231,7 +231,7 @@ button {
 }
 
 
-.icon-add_circle {
+.icon-add_circle, .icon-remove_circle {
   display: inline-block;
   color: $blue;
   font-size: 2rem;
