--- a/css/public.css
+++ b/css/public.css
@@ -323,7 +323,7 @@ body { position: relative; display: inline-block; width: 100%; margin: 0; paddin
 
 .box82_l, .box82_r { display: inline-block; float: left; }
 
-.box82_l { width: 80%; }
+.box82_l { width: 80%; min-height: 1px; }
 
 .box82_r { width: 20%; }
 
@@ -395,6 +395,12 @@ header { display: inline-block; width: 100%; height: 80px; padding-left: 15px; p
 .updateBox { display: inline-block; width: 100%; border: 1px dotted rgba(67, 151, 255, 0.3); -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; padding: 15px; }
 
 .chooseBox { display: inline-block; width: 100%; max-height: 500px; overflow-y: scroll; }
+
+.mu-file { display: inline-block; margin-top: 12px; position: relative; overflow: hidden; }
+.mu-file.show input { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; position: absolute; left: -1000px; top: -1000px; }
+.mu-file.show img, .mu-file.show p { display: inline-block; }
+.mu-file input { margin-top: 4px; border: 1px solid #75b6ff; background-color: #edf5ff; color: #75b6ff; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
+.mu-file img, .mu-file p { display: none; }
 
 .one-file { display: inline-block; margin-top: 12px; position: relative; overflow: hidden; }
 .one-file input { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; position: absolute; left: -1000px; top: -1000px; }
