--- a/css/input.css
+++ b/css/input.css
@@ -20,6 +20,7 @@ label { padding: 0; margin-right: 12px; cursor: pointer; }
 .search-container input[type=text] { padding: 6px; margin-top: 2px; font-size: 1rem; border: none; }
 .search-container input[type=text]::placeholder { color: #dcdbdc; }
 .search-container input[type=text].price_search { width: 80%; padding: 10px 6px; }
+.search-container input[type=text].price_search90 { width: 90%; padding: 10px 6px; }
 .search-container .searchBtn { float: left; padding: 7px 10px 5px 8px; font-size: 1.2rem; border: none; cursor: pointer; color: #dcdbdc; background-color: rgba(67, 151, 255, 0); -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .search-container .searchBtn:hover, .search-container .searchBtn:active { background-color: #4397ff; color: white; }
 .search-container .searchBtn.price_icon { background-color: rgba(67, 151, 255, 0.3); color: white; float: right; margin: 3px 3px 0 0; }
