--- a/scss/input.scss
+++ b/scss/input.scss
@@ -81,6 +81,11 @@ label {
       width: 80%;
       padding: 10px 6px;
     }
+
+    &.price_search90 {
+      width: 90%;
+      padding: 10px 6px;
+    }
   }
 
   .searchBtn {
