--- a/scss/other.scss
+++ b/scss/other.scss
@@ -272,6 +272,10 @@
     background-color: white;
     padding: 15px 20px;
   }
+
+  &.pc {
+    padding: 15px !important;
+  }
 }
 
 .price_boxsB {
