--- a/css/other.css
+++ b/css/other.css
@@ -71,6 +71,7 @@
 
 .price_boxsC { display: none; }
 .price_boxsC.price_boxsC_show { display: inline-block; width: 100%; background-color: white; padding: 15px 20px; }
+.price_boxsC.pc { padding: 15px !important; }
 
 .price_boxsB { display: inline-block; width: 100%; height: 8px; width: 100%; background-color: white; -webkit-border-bottom-right-radius: 3px; -webkit-border-bottom-left-radius: 3px; -moz-border-radius-bottomright: 3px; -moz-border-radius-bottomleft: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; }
 
