--- a/scss/link.scss
+++ b/scss/link.scss
@@ -25,6 +25,17 @@ button {
   }
 }
 
+.btn-s-blue {
+  display: inline-block;
+  padding: 5px 10px;
+  color: white;
+  font-size: 1rem;
+  @include border-radius(3px);
+  text-align: center !important;
+  background-color: $blue_l;
+  float: right;
+}
+
 .btn-half-blue, .btn-half-grey, .btn-half-orange, .btn-half-blueG, .btn-half-red, .btn-half-blueG2 {
   display: inline-block;
   padding: 7px 20px;
