--- a/scss/space.scss
+++ b/scss/space.scss
@@ -5,6 +5,11 @@
   padding-bottom: 40px;
 }
 
+.p-td-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .p-lr-30 {
   padding-left: 30px;
   padding-right: 30px;
@@ -28,6 +33,10 @@
 
 .p-d-10 {
   padding-bottom: 10px;
+}
+
+.p-d-25 {
+  padding-bottom: 25px;
 }
 
 .p-t-16 {
